@@ -15,6 +15,9 @@ mesa (8.0-2) UNRELEASED; urgency=low
     and bump the version.
   * Limit the build-dependency on libwayland-dev to linux-any too, and
     bump it.
+  * Automatically revert changes to bin/{config.{guess,sub},install-sh} in
+    the clean target. The first two are modified, the last one needs to be
+    turned back into a symlink.
 
  -- Julien Cristau <jcristau@debian.org>  Sat, 11 Feb 2012 11:49:06 +0100
 
